<resources>
    <string name="app_name">ConcertCare</string>
    <string name="sous_titre">L\'assistant de vos concerts</string>
    <string name="Screen1Fragment_label">Main Fragment</string>
    <string name="MainFragment_content">this app automatically inflates by Android system because this Fragment is static</string>
    <string name="content">awsome team</string>
    <string name="index">index</string>
    <string name="seekbarvalue">seekBarValue</string>
    <string name="greeting">Bonjour [prénom]</string>
    <string name="button1_main">Voir tout</string>
    <string name="mes_concerts">Mes concerts</string>
    <string name="assistance_text">Objet perdu ou trouvé ? Besoin d’assistance ? Localiser un point de service ?</string>

    <!-- Tabs for home screen -->
    <string name="tab_upcoming">À venir</string>
    <string name="tab_past">Passés</string>
    <string name="tab_cancelled">Annulés</string>
    <string name="title">demo title</string>
    <string name="message">demo message</string>

    <string-array name="languages">
        <item>Système (Français)</item>
        <item>Anglais</item>
        <item>Espagnol</item>
    </string-array>

    <string-array name="themes">
        <item>Système (Clair)</item>
        <item>Clair</item>
        <item>Sombre</item>
    </string-array>

    <string-array name="menu">
        <item>Accueil</item>
        <item>Localiser</item>
        <item>Assistance</item>
        <item>Paramètres</item>
    </string-array>

    <!-- page home -->
    <string name="demandes">Mes demandes</string>
    <string name="info">Plus d\'infos</string>

    <!-- request page -->
    <string name="assistance">Demande d’assistance</string>
    <string name="text_assis">Vous avez besoin d’assistance ?\nRemplissez ce formulaire</string>
    <string name="q1">À quel concert correspond la demande?</string>
    <string name="q2">Quel est le type de demande ? *</string>
    <string name="num_tel">Numéro de téléphone *</string>
    <string name="Remarques">Remarques</string>
    <string name="Send">Send</string>

    <!-- found page -->
    <string name="found">Signaler un objet trouvé</string>
    <string name="text_found">À quel concert l\'avez-vous trouvé ? *</string>
    <string name="prendre_photo">Prenez une photo</string>

    <string name="sujet_dem">Quel est le sujet de votre demande ?</string>
    <string name="sujet_dem1">J\'ai trouvé un objet</string>
    <string name="sujet_dem2">J\'ai perdu un objet</string>
    <string name="sujet_dem3">J\'ai besoin d\'assistance</string>
    <string name="select_concert_placeholder">Sélectionner un concert</string>

    <!-- lost page -->
    <string name="lost">Signaler un objet perdu</string>
    <string name="text_lost">À quel concert l\'avez-vous perdu ? *</string>

    <string name="type">Quel est le type de l\'objet ? *</string>
    <string name="description">Décrivez l\'objet *</string>
    <string name="label_description">Décrivez l\'objet</string>
    <string name="choisir_photo">Photo de l\'objet</string>
    <string name="label_photo">Choisir ...</string>

    <string-array name="item_types">
        <item>Séléctionner un type</item>
        <item>Téléphone</item>
        <item>Clés</item>
        <item>Portefeuille</item>
        <item>Sac</item>
        <item>Autre</item>
    </string-array>

    <string-array name="request_types">
        <item>Séléctionner un type</item>
        <item>Assistance PMR</item>
        <item>Casque spécial enfant</item>
        <item>Autre</item>
    </string-array>

    <!-- Parametre -->
    <string name="parametre">Paramètres</string>
    <string name="langue">Langue</string>
    <string name="theme">Thème</string>
    <string name="deco">Se déconnecter</string>
    <string name="suppr">Supprimer le compte</string>

    <!-- Localiser -->
    <string name="localiser">Localiser</string>
    <string name="staff">Trouver un point de staff à proximité</string>
    <string name="list_staff">Liste des points de staff</string>

    <!-- item demande -->
    <string name="demande_titre">Titre de la demande</string>
    <string name="demande_descr">Description de la demande</string>

</resources>