<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Screen3Fragment">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demandes"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sujet_dem"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border"
            android:padding="16dp"/>

        <Button
            android:id="@+id/foundItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sujet_dem1"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/lostItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sujet_dem2"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/needAssistanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/sujet_dem3"/>
    </LinearLayout>

</FrameLayout>
