<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Screen4Fragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paramètres"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langue"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/languages"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/themeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/themes"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deco"
            android:textColor="#757575"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
        android:textSize="16sp"/>

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suppr"
            android:textColor="#D32F2F"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
        android:textSize="16sp"/>


    </LinearLayout>

</FrameLayout>
