<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbarStyle="insideInset"
    android:fadeScrollbars="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bonjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            style="@style/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appDescription"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assistance_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bonjour" />

        <ImageView
            android:id="@+id/music_homepage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/musique"
            app:layout_constraintBottom_toTopOf="@+id/appDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/concertHeaderRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/appDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/mesConcerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes_concerts"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="0.4"/>

        <!-- TO DO Buttons container
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.4">

            <Button
                android:id="@+id/btn_passes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_past"
                android:textSize="12sp"
                android:paddingHorizontal="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:backgroundTint="@color/background_greyblack"
                android:textColor="@color/button_text_light"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_a_venir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_upcoming"
                android:textSize="12sp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:backgroundTint="@color/button_black"
                android:textColor="@color/button_text_light"/>
        </LinearLayout> -->

        <!-- "Voir tout" link
        <TextView
            android:id="@+id/voirTout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1_main"
            android:textSize="14sp"
            android:textColor="@color/purple_200"
            android:layout_gravity="end"
            android:layout_weight="0.2"/>-->
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:choiceMode="singleChoice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/concertHeaderRow"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>